--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+#Configurações para conexão ao Banco de Dados
+spring.datasource.url=jdbc:mysql://localhost:3306/bluefooddb?useTimezone=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=applicationBF
+spring.datasource.password=bfapp
 
+#Inicializa o DataSouce e corrige alguma eventual falha de conexão com o banco
+spring.datasource.initialization-mode=always
+
+#Não deixa a conexão aberta com o banco de dados enquanto a view está sendo renderizada
+spring.jpa.open-in-view=false
+
+#Criar as tabelas de entidade anotadas com @Entity
+spring.jpa.hibernate.ddl-auto=create
+
+#Dialeto do Hibernate para melhorar o SQL gerado
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
