--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.hibernate.ddl-auto=create
 
 #Dialeto do Hibernate para melhorar o SQL gerado
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#Caminho no sistema de arquivos onde ficará os logotipos dos restaurantes
+bluefood.files.restaurant.logotipo=D:/Temp/logotipo
