Cadastros finalizados. Limitado tamanho request e file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,9 @@ spring.jpa.hibernate.ddl-auto=create
 #Dialeto do Hibernate para melhorar o SQL gerado
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+#Limita o tamanho do arquivo e da request
+spring.servlet.multipart.max-file-size=512KB
+spring.servlet.multipart.max-request-size=512KB
+
 #Caminho no sistema de arquivos onde ficará os logotipos dos restaurantes
 bluefood.files.restaurant.logotipo=D:/Temp/logotipo
