--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,24 @@
-#Configurações para conexão ao Banco de Dados
-spring.datasource.url=jdbc:mysql://localhost:3306/bluefooddb?useTimezone=true&serverTimezone=America/Sao_Paulo
-spring.datasource.username=applicationBF
-spring.datasource.password=bfapp
-
 #Inicializa o DataSouce e corrige alguma eventual falha de conexão com o banco
 spring.datasource.initialization-mode=always
 
 #Não deixa a conexão aberta com o banco de dados enquanto a view está sendo renderizada
 spring.jpa.open-in-view=false
 
-#Criar as tabelas de entidade anotadas com @Entity
-spring.jpa.hibernate.ddl-auto=create
-
 #Dialeto do Hibernate para melhorar o SQL gerado
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#Habilita ou desabilita o log para cada Query SQL
+spring.jpa.show-sql=false
+
+#Define a codificacao dos scripts SQL
+spring.datasource.sql-script-encoding=UTF-8
 
 #Limita o tamanho do arquivo e da request
 spring.servlet.multipart.max-file-size=512KB
 spring.servlet.multipart.max-request-size=512KB
 
-#Caminho no sistema de arquivos onde ficará os logotipos dos restaurantes
-bluefood.files.restaurant.logotipo=D:/Temp/logotipo
+#URL para conectar ao Web Service de pagamento
+bluefood.sbpay.url=http://localhost:8081/sbpay/pay
+
+#Token para conexão com o Web Service de pagamento
+bluefood.sbpay.token=r2d2
